# Face-Recognition.cpp

./: CMakeLists.txt  FR.cpp  README.md  Train.py  encoding.json  requirements.txt
FaceLib/: face_detector.cpp  landmark_extractor.cpp
Trash/: CMakeLists.txt  take_photos.cpp  temp.txt  test_tflite.c
models/: .gitattributes  face_detection_front.tflite
